# SimPlanner1

./: README.md  app.py  app.py.backup  app.py.orig  app.py.temp  app_current_backup.py  attendance.py  backup_manager.py  drag_drop.py  excel_export.py  export_rooms.py  import_function.py  istruzioni_deploy.md  manuale_utente.py  models.py  pdf_export.py  pyproject.toml  replit.nix  requirements.txt  scheduler.py  scheduler_new.py  streamlit_requirements.txt  temp_extract_docx.py  temp_log.txt  ui_components.py  valutazione.py  visualization.py  word_export.py
