[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "plotly>=6.0.1",
    "python-docx>=1.1.2",
    "reportlab>=4.3.1",
    "streamlit-aggrid>=1.1.2",
    "streamlit>=1.44.1",
    "weasyprint>=65.0",
]
